js/js.translator/testData/incremental/invalidation/removeFile/main/m.kt
fun box(): String {
    if (qux0() != 42) return "Fail"
    if (qux1() != 24) return "Fail"
    return "OK"
}
